Minor changes to UI. Made more room for the table and added table row hovering. Little bit documentation of code. Improved code flexibility.

--- a/WebContent/VAADIN/themes/arhixml/styles.css
+++ b/WebContent/VAADIN/themes/arhixml/styles.css
@@ -1,2 +1,5 @@
 @import url(../reindeer/styles.css);
 
+.v-table tr.v-table-row:hover,.v-table tr.v-table-row-odd:hover {
+	background-color: LightBlue;
+}
